@@ -33,7 +33,7 @@ public class SecurityConfig {
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        // Use NoOp for local testing; replace with BCryptPasswordEncoder in production
+        // ⚠️ Reminder: Use BCryptPasswordEncoder for production environments
         return NoOpPasswordEncoder.getInstance();
     }
 
@@ -47,36 +47,87 @@ public class SecurityConfig {
 
     @Bean
     public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration config
+            AuthenticationConfiguration configuration
     ) throws Exception {
-        return config.getAuthenticationManager();
+        return configuration.getAuthenticationManager();
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+
         http
-                .csrf(csrf -> csrf.disable()) // Already disabled, which is good
+                .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+                .authenticationProvider(authenticationProvider())
+
                 .authorizeHttpRequests(auth -> auth
-                        // 1. ADD YOUR NEW SALARY ENDPOINTS TO PERMITALL
-                        .requestMatchers("/api/employee-salary-components/**").permitAll()
-                        .requestMatchers("/api/grade-salary-components/**").permitAll()
-                        .requestMatchers("/api/salary-components/**").permitAll()
 
-                        // Public endpoints
+                        /* ============================================================
+                           1. PUBLIC ENDPOINTS
+                           ============================================================ */
                         .requestMatchers("/api/auth/**", "/error").permitAll()
-                        .requestMatchers("/api/users/forgot-password/**", "/api/users/reset-password/**").permitAll()
+                        .requestMatchers("/api/users/forgot-password/**",
+                                "/api/users/reset-password/**").permitAll()
+                        .requestMatchers("/api/dashboard/**").permitAll()
 
-                        // These are already permitted in your file
-                        .requestMatchers("/api/employees/**", "/api/departments/**", "/api/designations/**").permitAll()
-                        .requestMatchers("/api/leaves/**", "/api/attendance/**", "/api/payrolls/**", "/api/reports/**").permitAll()
+                        /* ============================================================
+                           2. LEAVE MANAGEMENT (FIXED: Added Employee Access)
+                           ============================================================ */
+                        // Allow employees to fetch types and their own balance
+                        .requestMatchers(HttpMethod.GET, "/api/leave-types/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/api/leave-balance/employee/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_EMPLOYEE")
 
-                        // Role-based access (Keep these for later)
-                        .requestMatchers("/api/admin/**").hasAuthority("ROLE_ADMIN")
-                        .requestMatchers("/api/accountant/**").hasAuthority("ROLE_ACCOUNTANT")
+                        // Allow employees to view their history and submit requests
+                        .requestMatchers("/api/employee-leaves/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_EMPLOYEE")
+
+                        /* ============================================================
+                           3. SHARED MODULES (ADMIN, ACCOUNTANT, EMPLOYEE)
+                           ============================================================ */
+                        .requestMatchers("/api/attendance/**")
+                        .hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT", "ROLE_EMPLOYEE")
+
+                        /* ============================================================
+                           4. ACCOUNTING & MANAGEMENT (ADMIN, ACCOUNTANT)
+                           ============================================================ */
+                        .requestMatchers("/api/payrolls/**", "/api/reports/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT")
+
+                        // Read-only access for Accountants on Employees, Depts, and Designations
+                        .requestMatchers(HttpMethod.GET,
+                                "/api/employees/**",
+                                "/api/departments/**",
+                                "/api/designations/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT")
+
+                        // Read-only access for Accountants on Salary Components
+                        .requestMatchers(HttpMethod.GET,
+                                "/api/salary-components/**",
+                                "/api/grade-salary-components/**",
+                                "/api/employee-salary-components/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT")
+
+                        /* ============================================================
+                           5. ROLE-SPECIFIC PANELS
+                           ============================================================ */
                         .requestMatchers("/api/employee/**").hasAuthority("ROLE_EMPLOYEE")
+                        .requestMatchers("/api/accountant/**").hasAuthority("ROLE_ACCOUNTANT")
+                        .requestMatchers("/api/admin/**").hasAuthority("ROLE_ADMIN")
 
+                        /* ============================================================
+                           6. ADMIN ONLY (WRITE ACCESS & FALLBACK)
+                           ============================================================ */
+                        // Any remaining POST/PUT/DELETE on core modules defaults to ADMIN
+                        .requestMatchers("/api/employees/**",
+                                "/api/departments/**",
+                                "/api/designations/**",
+                                "/api/salary-components/**").hasAuthority("ROLE_ADMIN")
+
+                        // Global catch-all for /api/** (Admins)
+                        .requestMatchers("/api/**").hasAuthority("ROLE_ADMIN")
+
+                        /* ============================================================
+                           7. FINAL FALLBACK
+                           ============================================================ */
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
@@ -87,12 +138,18 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedOrigins(List.of(
+                "http://localhost:5173",
+                "http://localhost:3000"
+        ));
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        ));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
     }
